--- a/visary/templates/client/editar_cliente.html
+++ b/visary/templates/client/editar_cliente.html
@@ -193,6 +193,11 @@
                 {{ form.nome }}
                 {{ form.nome.errors }}
             </div>
+            <div>
+                <label for="{{ form.cpf.id_for_label }}">CPF *</label>
+                {{ form.cpf }}
+                {{ form.cpf.errors }}
+            </div>
             <div class="grid-inline">
                 <div>
                     <label for="{{ form.data_nascimento.id_for_label }}">Data de nascimento *</label>
@@ -218,7 +223,7 @@
                 </div>
             </div>
             <div>
-                <label for="{{ form.email.id_for_label }}">E-mail *</label>
+                <label for="{{ form.email.id_for_label }}">E-mail</label>
                 {{ form.email }}
                 {{ form.email.errors }}
             </div>
