--- a/visary/templates/forms/editar_formulario.html
+++ b/visary/templates/forms/editar_formulario.html
@@ -285,7 +285,7 @@
                             </div>
                             <div class="pergunta-actions">
                                 <a href="{% url 'system:editar_pergunta' pergunta.pk %}" class="btn btn-outline btn-small">Editar</a>
-                                <form method="post" action="{% url 'system:excluir_pergunta' pergunta.pk %}" onsubmit="return confirm('Deseja realmente excluir a pergunta: {{ pergunta.pergunta }}?');" style="margin: 0;">
+                                <form method="post" action="{% url 'system:excluir_pergunta' pergunta.pk %}" onsubmit="return confirm('Deseja realmente excluir a pergunta: {{ pergunta.pergunta|escapejs }}?');" style="margin: 0;">
                                     {% csrf_token %}
                                     <button type="submit" class="btn btn-danger btn-small">Excluir</button>
                                 </form>
