--- a/visary/templates/forms/home_formularios.html
+++ b/visary/templates/forms/home_formularios.html
@@ -196,14 +196,6 @@
 {% endblock %}
 
 {% block app_content %}
-{% if messages %}
-    <ul class="messages">
-        {% for message in messages %}
-            <li class="{{ message.tags }}">{{ message }}</li>
-        {% endfor %}
-    </ul>
-{% endif %}
-
 <section class="actions-grid">
     <article class="action-card">
         <div class="action-card__icon">➕</div>
@@ -227,6 +219,7 @@
             <h2>Meus Formulários</h2>
             <p>Formulários preenchidos pelos seus clientes</p>
         </header>
+        <div style="overflow-x: auto; -webkit-overflow-scrolling: touch;">
         <table class="formularios-table">
             <thead>
                 <tr>
@@ -287,6 +280,7 @@
                 {% endfor %}
             </tbody>
         </table>
+        </div>
     </article>
 </section>
 {% else %}
