--- a/visary/templates/partners/listar_partners.html
+++ b/visary/templates/partners/listar_partners.html
@@ -29,6 +29,14 @@
         max-height: 100%;
     }
 
+    thead th {
+        position: sticky;
+        top: 0;
+        z-index: 2;
+        background: var(--card-bg);
+        backdrop-filter: blur(4px);
+    }
+
     table {
         width: 100%;
         border-collapse: collapse;
@@ -79,12 +87,6 @@
     }
 
     @media (max-width: 768px) {
-        .card {
-            height: calc(100vh - 250px);
-            max-height: calc(100vh - 250px);
-            min-height: 300px;
-        }
-
         table {
             font-size: 0.85rem;
         }
@@ -112,14 +114,6 @@
 {% endblock %}
 
 {% block app_content %}
-{% if messages %}
-    <ul class="messages">
-        {% for message in messages %}
-            <li class="{{ message.tags }}">{{ message }}</li>
-        {% endfor %}
-    </ul>
-{% endif %}
-
 <section class="card">
     <div class="table-wrapper">
         <table>
