--- a/visary/templates/process/listar_status_processo.html
+++ b/visary/templates/process/listar_status_processo.html
@@ -15,7 +15,10 @@
     .card {
         display: flex;
         flex-direction: column;
+        height: calc(100vh - 280px);
+        max-height: calc(100vh - 280px);
         min-height: 400px;
+        overflow: hidden;
     }
 
     .card .table-wrapper {
@@ -23,6 +26,15 @@
         min-height: 0;
         overflow-y: auto;
         overflow-x: auto;
+        max-height: 100%;
+    }
+
+    thead th {
+        position: sticky;
+        top: 0;
+        z-index: 2;
+        background: var(--card-bg);
+        backdrop-filter: blur(4px);
     }
 
     table {
@@ -114,14 +126,6 @@
 {% endblock %}
 
 {% block app_content %}
-{% if messages %}
-    <ul class="messages">
-        {% for message in messages %}
-            <li class="{{ message.tags }}">{{ message }}</li>
-        {% endfor %}
-    </ul>
-{% endif %}
-
 <section class="card">
     <div class="table-wrapper">
         <table>
